src/main/default/objects/Account/fields/AvailableCredit__c.field-meta.xml
<CustomField>
    <fullName>AvailableCredit__c</fullName>
    <formula>aforza__Credit_Amount__c - aforza__Outstanding_Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>