src/main/default/objects/Account/fields/AvailableCustomerCredit__c.field-meta.xml
<CustomField>
    <fullName>AvailableCustomerCredit__c</fullName>
    <label>Available Customer Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>