src/main/default/objects/Account/fields/BarrDirectAppUser__c.field-meta.xml
<CustomField>
    <fullName>BarrDirectAppUser__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <inlineHelpText>Would the customer like to use the Barr Direct App?</inlineHelpText>
    <label>Barr Direct App User?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>