src/main/default/objects/Account/fields/BillingSameAsShipping__c.field-meta.xml
<CustomField>
    <fullName>BillingSameAsShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Same As Shipping?</label>
    <type>Checkbox</type>
</CustomField>