src/main/default/objects/Account/fields/BillToAccounts__c.field-meta.xml
<CustomField>
    <fullName>BillToAccounts__c</fullName>
    <label>Bill To Accounts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>