src/main/default/objects/Account/fields/BillToName__c.field-meta.xml
<CustomField>
    <fullName>BillToName__c</fullName>
    <formula>IF(DefaultInvoiceBillingAddress__c,  Parent.Name , Name )</formula>
    <label>Bill To Name</label>
    <type>Text</type>
</CustomField>