src/main/default/objects/Account/fields/BillToReference__c.field-meta.xml
<CustomField>
    <fullName>BillToReference__c</fullName>
    <label>Bill To Reference</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>