src/main/default/objects/Account/fields/BottomlineRefNumber__c.field-meta.xml
<CustomField>
    <fullName>BottomlineRefNumber__c</fullName>
    <externalId>true</externalId>
    <label>Bottomline Ref. Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>