src/main/default/objects/Account/fields/CallPriority__c.field-meta.xml
<CustomField>
    <fullName>CallPriority__c</fullName>
    <label>Call Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Priority</valueSetName>
    </valueSet>
</CustomField>