src/main/default/objects/Account/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>