src/main/default/objects/Account/fields/ClosedReason__c.field-meta.xml
<CustomField>
    <fullName>ClosedReason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>Buyer is uncontactable</fullName>
            </value>
            <value>
                <fullName>Buying from C&amp;C / Wholesaler</fullName>
            </value>
            <value>
                <fullName>Can&apos;t make min order</fullName>
            </value>
            <value>
                <fullName>Change of owner</fullName>
            </value>
            <value>
                <fullName>Closed down</fullName>
            </value>
            <value>
                <fullName>Service grievance</fullName>
            </value>
            <value>
                <fullName>Lost contact</fullName>
            </value>
            <value>
                <fullName>No order 26+ weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>