src/main/default/objects/Account/fields/CreateCalls__c.field-meta.xml
<CustomField>
    <fullName>CreateCalls__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Calls</label>
    <type>Checkbox</type>
</CustomField>