src/main/default/objects/Account/fields/CreditStatus__c.field-meta.xml
<CustomField>
    <fullName>CreditStatus__c</fullName>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
                <default>true</default>
                <label>Good</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>On Stop</fullName>
                <isActive>false</isActive>
                <label>On Stop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>