src/main/default/objects/Account/fields/CurrentGridNumber__c.field-meta.xml
<CustomField>
    <fullName>CurrentGridNumber__c</fullName>
    <formula>IF(ISBLANK(SecondaryGridNumber__c), PrimaryGridNumber__c , IF(VALUE(LEFT(PrimaryGridNumber__c,1)) == WEEKDAY(NextDeliveryDate__c), PrimaryGridNumber__c, SecondaryGridNumber__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Grid Number</label>
    <type>Text</type>
</CustomField>