src/main/default/objects/Account/fields/CurrentWeek__c.field-meta.xml
<CustomField>
    <fullName>CurrentWeek__c</fullName>
    <formula>TEXT(MOD( FLOOR( ( Today__c - PrimaryStartDate__c ) /7 ), 4)+1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Week</label>
    <type>Text</type>
</CustomField>