src/main/default/objects/Account/fields/CustomerAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccountNumber__c</fullName>
    <label>Customer Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>