src/main/default/objects/Account/fields/CustomerMandateForm__c.field-meta.xml
<CustomField>
    <fullName>CustomerMandateForm__c</fullName>
    <label>Customer Mandate Form</label>
    <type>Url</type>
</CustomField>