src/main/default/objects/Account/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <label>Customer Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>