src/main/default/objects/Account/fields/CustomerShopNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerShopNumber__c</fullName>
    <label>Customer Shop Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>