src/main/default/objects/Account/fields/DdActive__c.field-meta.xml
<CustomField>
    <fullName>DdActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DD Active?</label>
    <type>Checkbox</type>
</CustomField>