src/main/default/objects/Account/fields/DefaultInventory__c.field-meta.xml
<CustomField>
    <fullName>DefaultInventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Inventory</label>
    <referenceTo>aforza__Inventory__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>