src/main/default/objects/Account/fields/DefaultInvoiceBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>DefaultInvoiceBillingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is ticked, the billing address and the Invoice email address on the Customer Account, will be used in the invoice document and distribution</inlineHelpText>
    <label>Default Invoice Billing Address</label>
    <type>Checkbox</type>
</CustomField>