src/main/default/objects/Account/fields/DeliveryNoteEmail__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNoteEmail__c</fullName>
    <label>Delivery Note Email</label>
    <type>Email</type>
</CustomField>