src/main/default/objects/Account/fields/DeliveryPointCriteriaMet__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPointCriteriaMet__c</fullName>
    <inlineHelpText>Does the Delivery point meet the criteria for sign up? E.g. Adequate parking</inlineHelpText>
    <label>Delivery Point Criteria Met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>