src/main/default/objects/Account/fields/DeliveryPointReference__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPointReference__c</fullName>
    <displayFormat>DP-{00000}</displayFormat>
    <label>Delivery Point Reference</label>
    <type>AutoNumber</type>
</CustomField>