src/main/default/objects/Account/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <inlineHelpText>Which Depot Will Service This Customer?</inlineHelpText>
    <label>Depot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>