src/main/default/objects/Account/fields/DirectDebitMandateRef__c.field-meta.xml
<CustomField>
    <fullName>DirectDebitMandateRef__c</fullName>
    <label>Direct Debit Mandate Ref.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>