src/main/default/objects/Account/fields/DirectDebitSetUp__c.field-meta.xml
<CustomField>
    <fullName>DirectDebitSetUp__c</fullName>
    <label>Direct Debit Set Up?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>