src/main/default/objects/Account/fields/DPStatus__c.field-meta.xml
<CustomField>
    <fullName>DPStatus__c</fullName>
    <label>DP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Credit Limit Exceeded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>