src/main/default/objects/Account/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <description>Hidden field to be populated based on the selected ‘Driver’ in the Account Team object, where Account Team Member Role = ‘Driver’.</description>
    <label>Driver Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>