src/main/default/objects/Account/fields/EpoStatus__c.field-meta.xml
<CustomField>
    <fullName>EpoStatus__c</fullName>
    <label>EPOS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - KEY Store Allowing Access to their Data</fullName>
            </value>
            <value>
                <fullName>2 - KEY Store not Allowing Access to their Data</fullName>
            </value>
            <value>
                <fullName>3 - EPOS Store Allowing Access to their Data</fullName>
            </value>
            <value>
                <fullName>4 - EPOS Store not Allowing Access to their Data</fullName>
            </value>
            <value>
                <fullName>5 - No EPOS Data Captured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>