src/main/default/objects/Account/fields/ExternalDBID__c.field-meta.xml
<CustomField>
    <fullName>ExternalDBID__c</fullName>
    <externalId>true</externalId>
    <label>External DB ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>