src/main/default/objects/Account/fields/FieldSalesRegion__c.field-meta.xml
<CustomField>
    <fullName>FieldSalesRegion__c</fullName>
    <label>Field Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>