src/main/default/objects/Account/fields/FieldSalesRepId__c.field-meta.xml
<CustomField>
    <fullName>FieldSalesRepId__c</fullName>
    <label>Field Sales Rep Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>