src/main/default/objects/Account/fields/FieldSalesTerritory__c.field-meta.xml
<CustomField>
    <fullName>FieldSalesTerritory__c</fullName>
    <label>Field Sales Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>