src/main/default/objects/Account/fields/FixedDeliveryInstructions__c.field-meta.xml
<CustomField>
    <fullName>FixedDeliveryInstructions__c</fullName>
    <label>Fixed Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>