src/main/default/objects/Account/fields/FormalCreditCheckAgreed__c.field-meta.xml
<CustomField>
    <fullName>FormalCreditCheckAgreed__c</fullName>
    <inlineHelpText>Have they agreed to a formal credit check?</inlineHelpText>
    <label>Formal Credit Check Agreed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>