src/main/default/objects/Account/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Fortnightly</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1 fortnightly cycle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>