src/main/default/objects/Account/fields/IncreaseToStandardCreditRequired__c.field-meta.xml
<CustomField>
    <fullName>IncreaseToStandardCreditRequired__c</fullName>
    <label>Increase to standard credit required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>