src/main/default/objects/Account/fields/IsCoverage__c.field-meta.xml
<CustomField>
    <fullName>IsCoverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Coverage</label>
    <type>Checkbox</type>
</CustomField>