src/main/default/objects/Account/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>