src/main/default/objects/Account/fields/JDENumber__c.field-meta.xml
<CustomField>
    <fullName>JDENumber__c</fullName>
    <label>JDE Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>