src/main/default/objects/Account/fields/KeyAccount__c.field-meta.xml
<CustomField>
    <fullName>KeyAccount__c</fullName>
    <label>Key Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Cash\Credit Open Case</fullName>
            </value>
            <value>
                <fullName>Abm Catering</fullName>
            </value>
            <value>
                <fullName>Amey Business Services</fullName>
            </value>
            <value>
                <fullName>Aramark P.L.C.</fullName>
            </value>
            <value>
                <fullName>Argyll &amp; Bute Council</fullName>
            </value>
            <value>
                <fullName>Bako</fullName>
            </value>
            <value>
                <fullName>Baxter Storey</fullName>
            </value>
            <value>
                <fullName>Beamish Museum</fullName>
            </value>
            <value>
                <fullName>Booker C&amp;C</fullName>
            </value>
            <value>
                <fullName>Bp Dealer</fullName>
            </value>
            <value>
                <fullName>Bridewell Direct</fullName>
            </value>
            <value>
                <fullName>Bridewell Uk</fullName>
            </value>
            <value>
                <fullName>C.C.A(Consortium Cat &amp; Admin)</fullName>
            </value>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>Confex</fullName>
            </value>
            <value>
                <fullName>Cost Effective Catering</fullName>
            </value>
            <value>
                <fullName>Costcutter Dsd</fullName>
            </value>
            <value>
                <fullName>Derbyshire County Council</fullName>
            </value>
            <value>
                <fullName>Dominos Pizza</fullName>
            </value>
            <value>
                <fullName>East Ayrshire Council</fullName>
            </value>
            <value>
                <fullName>Epso</fullName>
            </value>
            <value>
                <fullName>Falkirk Council Leisure Serv.</fullName>
            </value>
            <value>
                <fullName>Finch Walthamstow</fullName>
            </value>
            <value>
                <fullName>Findlay&apos;S Water</fullName>
            </value>
            <value>
                <fullName>Foodservice Options Colleges</fullName>
            </value>
            <value>
                <fullName>Foodservice Options Schools</fullName>
            </value>
            <value>
                <fullName>Fozmans (Helpertons) Buy Group</fullName>
            </value>
            <value>
                <fullName>G101 Off Sales</fullName>
            </value>
            <value>
                <fullName>Glasgow Direct &amp; Care</fullName>
            </value>
            <value>
                <fullName>Gold Stores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>