src/main/default/objects/Account/fields/LastSuccessfulCallDate__c.field-meta.xml
<CustomField>
    <fullName>LastSuccessfulCallDate__c</fullName>
    <label>Last Successful Call Date</label>
    <summarizedField>aforza__Visit__c.aforza__Planned_Time__c</summarizedField>
    <summaryFilterItems>
        <field>aforza__Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Remote Visit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>aforza__Visit__c.aforza__Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>aforza__Visit__c.aforza__Type__c</field>
        <operation>equals</operation>
        <value>Phone Call</value>
    </summaryFilterItems>
    <summaryForeignKey>aforza__Visit__c.aforza__Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>