src/main/default/objects/Account/fields/LastSyncFromJDEDate__c.field-meta.xml
<CustomField>
    <fullName>LastSyncFromJDEDate__c</fullName>
    <label>Last Sync from JDE Date</label>
    <type>Date</type>
</CustomField>