src/main/default/objects/Account/fields/MinOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>MinOrderQuantity__c</fullName>
    <label>Min. Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>