src/main/default/objects/Account/fields/MonthlyNextDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>MonthlyNextDeliveryDate__c</fullName>
    <formula>IF(CurrentWeek__c=&quot;4&quot;,IF(WEEKDAY(Today__c)=(VALUE(LEFT(PrimaryGridNumber__c,1))+1),Today__c+7,IF(WEEKDAY(Today__c)=7,Today__c+VALUE(LEFT(PrimaryGridNumber__c,1))+1,IF(WEEKDAY(Today__c)=1,Today__c+VALUE(LEFT(PrimaryGridNumber__c,1)),IF(WEEKDAY(Today__c)&lt;(VALUE(LEFT(PrimaryGridNumber__c,1))+1),Today__c+(VALUE(LEFT(PrimaryGridNumber__c,1))+1-WEEKDAY(Today__c)),Today__c+7-(WEEKDAY(Today__c)-VALUE(LEFT(PrimaryGridNumber__c,1))-1))))),IF(CurrentWeek__c=&quot;2&quot;,IF(WEEKDAY(Today__c)=(VALUE(LEFT(PrimaryGridNumber__c,1))+1),Today__c+21,IF(WEEKDAY(Today__c)=7,Today__c+VALUE(LEFT(PrimaryGridNumber__c,1))+1+14,IF(WEEKDAY(Today__c)=1,Today__c+VALUE(LEFT(PrimaryGridNumber__c,1))+14,IF(WEEKDAY(Today__c)&lt;(VALUE(LEFT(PrimaryGridNumber__c,1))+1),Today__c+(VALUE(LEFT(PrimaryGridNumber__c,1))+1+14-WEEKDAY(Today__c)),Today__c+21-(WEEKDAY(Today__c)-VALUE(LEFT(PrimaryGridNumber__c,1))-1))))),IF(CurrentWeek__c=&quot;3&quot;,IF(WEEKDAY(Today__c)=(VALUE(LEFT(PrimaryGridNumber__c,1))+1),Today__c+14,IF(WEEKDAY(Today__c)=7,Today__c+VALUE(LEFT(PrimaryGridNumber__c,1))+1+7,IF(WEEKDAY(Today__c)=1,Today__c+VALUE(LEFT(PrimaryGridNumber__c,1))+7,IF(WEEKDAY(Today__c)&lt;(VALUE(LEFT(PrimaryGridNumber__c,1))+1),Today__c+(VALUE(LEFT(PrimaryGridNumber__c,1))+1+7-WEEKDAY(Today__c)),Today__c+14-(WEEKDAY(Today__c)-VALUE(LEFT(PrimaryGridNumber__c,1))-1))))),IF(WEEKDAY(Today__c)=(VALUE(LEFT(PrimaryGridNumber__c,1))+1),Today__c+28,IF(WEEKDAY(Today__c)=7,Today__c+VALUE(LEFT(PrimaryGridNumber__c,1))+1+21,IF(WEEKDAY(Today__c)=1,Today__c+VALUE(LEFT(PrimaryGridNumber__c,1))+21,IF(WEEKDAY(Today__c)&lt;(VALUE(LEFT(PrimaryGridNumber__c,1))+1),Today__c+(VALUE(LEFT(PrimaryGridNumber__c,1))+1+21-WEEKDAY(Today__c)),Today__c+28-(WEEKDAY(Today__c)-VALUE(LEFT(PrimaryGridNumber__c,1))-1))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Next Delivery Date</label>
    <type>Date</type>
</CustomField>