src/main/default/objects/Account/fields/NextCallDateRollUp__c.field-meta.xml
<CustomField>
    <fullName>NextCallDateRollUp__c</fullName>
    <label>Next Call Date</label>
    <summarizedField>aforza__Visit__c.aforza__Planned_Time__c</summarizedField>
    <summaryFilterItems>
        <field>aforza__Visit__c.aforza__Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </summaryFilterItems>
    <summaryForeignKey>aforza__Visit__c.aforza__Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>