src/main/default/objects/Account/fields/NextDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>NextDeliveryDate__c</fullName>
    <formula>IF(
    NextDeliveryDateHidden__c &gt;= TODAY(),
    NextDeliveryDateHidden__c,
    IF(
        OR(ISPICKVAL(Depot__c, &quot;C&quot;), ISPICKVAL(Depot__c,&quot;Z&quot;), ISPICKVAL(Depot__c, &quot;B&quot;)),
        DATEVALUE(  NextCallDate__c ) +
            CASE(
              WEEKDAY(DATEVALUE( NextCallDate__c )),
               1, 1,
               2, 1,
               3, 1,
               4, 1,
               5, 1,
               6, 3,
               7, 2,
             0),
        DATEVALUE( NextCallDate__c ) +
            CASE(
              WEEKDAY(DATEVALUE( NextCallDate__c )),
               1, 2,
               2, 2,
               3, 2,
               4, 2,
               5, 4,
               6, 4,
               7, 3,
             0)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Delivery Date</label>
    <type>Date</type>
</CustomField>