src/main/default/objects/Account/fields/OneStopShop__c.field-meta.xml
<CustomField>
    <fullName>OneStopShop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Stop Shop</label>
    <type>Checkbox</type>
</CustomField>