src/main/default/objects/Account/fields/OpeningTime__c.field-meta.xml
<CustomField>
    <fullName>OpeningTime__c</fullName>
    <label>Opening Time</label>
    <type>Time</type>
</CustomField>