src/main/default/objects/Account/fields/OutletType__c.field-meta.xml
<CustomField>
    <fullName>OutletType__c</fullName>
    <label>Outlet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Symbol Store (Active)</fullName>
            </value>
            <value>
                <fullName>2 - Large Convenience Store - Double Front Store</fullName>
            </value>
            <value>
                <fullName>3 - Small Convenience Store - Single Front Store</fullName>
            </value>
            <value>
                <fullName>4 - CTN (No Alcohol or Frozen Food)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>