src/main/default/objects/Account/fields/OwningFieldSalesRep__c.field-meta.xml
<CustomField>
    <fullName>OwningFieldSalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owning Field Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsFieldSalesRep</relationshipName>
    <type>Lookup</type>
</CustomField>