src/main/default/objects/Account/fields/OwningTAM__c.field-meta.xml
<CustomField>
    <fullName>OwningTAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owning TAM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>TAM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>