src/main/default/objects/Account/fields/PerfectStoreScoreEligible__c.field-meta.xml
<CustomField>
    <fullName>PerfectStoreScoreEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please set this to true if you want to start Perfect Store Score for this customer.</inlineHelpText>
    <label>Perfect Store Score Eligible</label>
    <type>Checkbox</type>
</CustomField>