src/main/default/objects/Account/fields/PORequired__c.field-meta.xml
<CustomField>
    <fullName>PORequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Required?</label>
    <type>Checkbox</type>
</CustomField>