src/main/default/objects/Account/fields/PreferredCallTimeTelesales__c.field-meta.xml
<CustomField>
    <fullName>PreferredCallTimeTelesales__c</fullName>
    <label>Preferred Call Time Telesales</label>
    <type>Time</type>
</CustomField>