src/main/default/objects/Account/fields/PreferredVisitTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredVisitTime__c</fullName>
    <label>Preferred Visit Time</label>
    <type>Time</type>
</CustomField>