src/main/default/objects/Account/fields/PreviousAccount__c.field-meta.xml
<CustomField>
    <fullName>PreviousAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only another Delivery Point with DP Status set to Closed can be selected.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Outlet</value>
        </filterItems>
        <filterItems>
            <field>Account.AccountStatus__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Previous Accounts</relationshipLabel>
    <relationshipName>PreviousAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>