src/main/default/objects/Account/fields/PricedUnpricedInvoice__c.field-meta.xml
<CustomField>
    <fullName>PricedUnpricedInvoice__c</fullName>
    <label>Priced/Unpriced Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priced</fullName>
            </value>
            <value>
                <fullName>Unpriced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>